	  and UART DMA.  Provided by Lorenz Meier (2013-9-13).
	* configs/maple:  Board configuration for the LeafLabs Maple
	  and Maple Mini boards.  From Librae (2013-9-13).
	* arch/arm/src/sama5/sam_emac.c and .h:  Skeleton files for
	  a SAMA5 EMAC driver.  Not much in the initial files; these
	  are just hacked out and gutted versions of the corresponding
	  STM32 files (2013-9-13).

6.31 2013-xx-xx Gregory Nutt <gnutt@nuttx.org>

	* nuttx/fs/romfs/fs_romfsutil.c:  Back out part of a recent
	  ROMFS change (2013-9-14).
	* configs/sama5d3x-ek/src/sam_ethernet.c:  Add support for
	  PHY interrupts (2013-9-15).
	* arch/arm/src/kl/chip/kl_pit.h and kp_tpm.h:  Add register
	  definitions for the Freescale Kinetis KL25Z from Alan
	  Carvalho de Assis (2013-9-15).
	* configs/ and a few Ethernet drivers:  Add the prefix ETH0
	  to all PHY configuration selections.  This will allow us
	  to support to Ethernet MAC drivers with two different
	  PHYS (identified with ETH0 and ETH1) (2013-9-17).
	* net/Kconfig and drivers/net/Kconfig:  Move PHY selections from
	  net/Kconfig to drivers/net/Kconfig where they belong.  Add the previx
	  ETH0_ to each PHY selection.  And a new configuration
	  CONFIG_NETDEV_MULTINIC that can be set to enable support for multiple
	  Ethernet MAC drivers (not fully implemented yet).  When Enabled,
	  another set of PHY selections are enabled for ETH1_ (2013-9-17).
	* include/nuttx/net/mii.h:  Add definitions for the Micrel KSZ8051 PHY
	  (2013-9-17).
	* configs/zkit-arm-1768:  MMC/SD is on SPI, not SSP0.  From Rashid
	  Fatah (2013-9-17).
	* configs/: Lots of defconfig files changes.  A consequence of the
	  above renaming and moving of the PHY configuration settings is
	  that the you now also have to set CONFIG_NETDEVICES=y if you
	  need to set a PHY configuration (2013-9-17).
	* arch/arm/src/lpc17xx/lpc17_spi.c:  Remove undefined spi_select()
	  prototype.  This was cause compile time warnings (2013-9-17).
